hack-hour 2 draw-stairs submission, @todo test-cases

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,10 @@
 {
   "extends": "airbnb",
-  "root": true
+  "root": true,
+  "rules": {
+    "no-plusplus": 0,
+    "no-tabs": 0,
+    "eol-last": 0,
+    "indent": 0
+  }
 }
